# CTLAB

./: CMakeLists.txt  README.md  ReadMe  copyright
src/: AnalyticalRecon.cpp  AnalyticalRecon.cu  AnalyticalRecon.h  AnalyticalRecon_CBFBP.cpp  AnalyticalRecon_CBFBP.h  BackprojectionModelMap.cpp  BackprojectionModelMap.h  CMakeLists.txt  CMakeLists.txt~  CTLAB.h  ConeEAGeo.cpp  ConeEAGeo.h  ConeEDGeo.cpp  ConeEDGeo.h  ConstantValues.h  DD3_GPU_Back.cu  DD3_GPU_Back.cu~  DD3_GPU_Back.h  DD3_GPU_Back.h~  DD3_GPU_Proj.cu  DD3_GPU_Proj.cu~  DD3_GPU_Proj.h  DD3_GPU_Proj.hpp~  DD3_GPU_Proj.h~  DD3_GPU_demo.cu  DD3_GPU_demo.cu~  DD3_GPU_demo.h  DD3_GPU_doublePrecisonBranchless.cu  DD3_GPU_doublePrecisonBranchless.h  DD3_GPU_recon.cu  DD3_GPU_recon.h  DDM_back.cpp  DDM_back.cu  DDM_back.h  DDM_proj.cpp  DDM_proj.cpp~  DDM_proj.cu  DDM_proj.cu~  DDM_proj.h  Detector.cpp  (+74 more)
src/Analytical_AAPM/: Backprojection3DWeight.cu  Backprojection3DWeighting.m  ParallelRebinCBCurve.cu  ParallelRebinningConeBeamCurve.m  PreweightAndFiltering.m  ReadMe.md  ReadMe.txt  ReweightingAndFiltering_GPU.cu  demoRecon.m  testBackprojectionIssue.m
src/Analytical_AAPM/Katsevich_DEMO/: CheckData.m  CreateHSP.m  CreateProjSlice.cpp  CreateProjSlice.mexa64  CreateProjSlice.mexw64  CreateProjSliceDisk.cpp  CreateProjSliceDisk.mexa64  CreateProjSliceDisk.mexw64  FindTau.m  FunctionKat.m  KatsevichBkProj.cu  KatsevichBkProj.mexa64  KatsevichBkProj.mexw64  KatsevichFiltering.m  KatsevichFiltering_T.m  ReadMe.md  Readme.txt  compileGPU.m  rebinToPanel.m
src/CPUThreadPool/: SafeQueue.h  ThreadPoolForPhantomCreator.h
src/GUI/: ReadMe.md
src/OSSART_AAPM/: CollectImageCfg.m  CollectReconCfg.asv  CollectReconCfg.m  ConvertToReconConf.m  Copy_of_HelicalToFanFunc_mex.cpp  DD2MutiSlices.m  HelicalToFan.m  HelicalToFanFunc_mex.cpp  HelicalToFanFunc_mex.mexa64  HelicalToFanFunc_mex.mexw64  HelicalToFanRoutineBigPatient.m  HelicalToFan_routine.m  Info.IMA  MultiSlicesBackGPU.cu  MultiSlicesBackGPU.mexa64  MultiSlicesBackGPU.mexw64  MultiSlicesProjGPU.cu  MultiSlicesProjGPU.mexa64  MultiSlicesProjGPU.mexw64  OSSART_AAPM.m  ReadMe.md  compileCOVfuncs.m  cov_4uint8_to_float.cpp  cov_4uint8_to_float.mexa64  cov_4uint8_to_float.mexw64  cov_8uint8_to_2floats.cpp  cov_8uint8_to_2floats.mexa64  cov_8uint8_to_2floats.mexw64  cov_8uint8_to_double.cpp  cov_8uint8_to_double.mexa64  cov_8uint8_to_double.mexw64  cov_uint8_to_PhoStat.cpp  cov_uint8_to_PhoStat.mexa64  cov_uint8_to_PhoStat.mexw64  cov_uint8_to_double.cpp  cov_uint8_to_double.mexa64  cov_uint8_to_double.mexw64  doubleEveryElement.mexw64  gpuDeviceCount_mex.cu  gpuDeviceCount_mex.mexa64  (+5 more)
src/matlab_script/: configurationFile.txt  genMatrix.m
